# Tough-Game-Engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: CMakeLists.txt  def.h  main.cpp  tge.h
src/render/: CMakeLists.txt  render.cpp  render.h
src/render/core/: CMakeLists.txt  core.cpp  core.h  core_exception.h  surface.cpp  surface.h
src/render/core/create_infos/: CMakeLists.txt  application_info.h  debug_messenger_info.h  device_extensions.h  info_template.h  infos.cpp  infos.h  instance_extensions.h  layers.h  queue_info.h  swapchain_info.h  validation_features.h
src/render/core/vma_wrapper/: CMakeLists.txt  buffer.cpp  buffer.h  image.cpp  image.h  vma.cpp  vma_allocator.h
src/win/: CMakeLists.txt  win.cpp  win.h
